data/derived/sp14/progs/unify/prog4115.ml.out
Characters 31-32:
  let fixpoint (f,b) = wwhile (b,b);;
                                 ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
